app-test/testdata/typesystem/neg/pattern-matching-alternative-pattern-type/check/patmat.check
testdata/typesystem/neg/pattern-matching-alternative-pattern-type/src/patmat.cal:7:21: error: Incompatible types; expected int but was bool.
                    true : 1 end // error
                    ^^^^